syntax = "proto3";
package IronPdfEngine.Proto;
import "PdfDocument.proto";
import "Basic.proto";

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message Page{
  double width = 1;
  double height = 2;
  double print_width = 3;
  double print_height = 4;
  PageRotation page_rotation = 5;
}

message  PageCollection{
  repeated Page pages = 1;
}


message GetPagesRequest{
  PdfDocument document = 1;
}

message GetPagesResult{
  oneof result_or_exception {
    PageCollection result = 1;
    RemoteException exception = 2;
  }
}

message CopyPagesRequest{
  PdfDocument document = 1;
  repeated  int32 page_indexes = 2;
}

message PdfDocumentInsertRequest{
  PdfDocument main_document = 1;
  int32  insertion_index = 2;
  PdfDocument inserted_document = 3;
}

message PdfDocumentMergeRequest{
  repeated PdfDocument documents = 1;
}

message RemovePagesRequest{
  PdfDocument document = 1;
  repeated int32 page_indexes = 2;
}

message RotatePagesRequest{
  PdfDocument document = 1;
  repeated int32 page_indexes = 2;
  PageRotation page_rotation = 3;
}

message PageRotation{
  int32 enum_value = 1;
}